--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -24,8 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "NODE_OPTIONS='--max-old-space-size=4096' react-scripts start",
-    "build": "NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
+    "start": "cross-env NODE_OPTIONS=--max-old-space-size=4096 react-scripts start",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0"
   }
 }
